# FPFH-ICP

./: CMakeLists.txt  FPFH.sh  README.md  icp.sh  show_result.sh  viewer.sh
data/point/point1/重叠率0.1/: truth.txt
data/point/point1/重叠率0.1/point/: target.pcd
data/point/point1/重叠率0.2/: truth.txt
data/point/point1/重叠率0.2/point/: source.pcd  target.pcd
data/point/point1/重叠率0.3/: truth.txt
data/point/point1/重叠率0.3/point/: target.pcd
data/point/point1/重叠率0.4/: truth.txt
data/point/point1/重叠率0.4/point/: target.pcd
data/point/point1/重叠率0.5/: truth.txt
data/point/point1/重叠率0.5/point/: target.pcd
data/point/point1/重叠率1.0/: truth.txt
data/point/point1/重叠率1.0/point/: target.pcd
data/point/point2/重叠率0.1/: truth.txt
data/point/point2/重叠率0.1/point/: target.pcd
data/point/point2/重叠率0.2/: truth.txt
data/point/point2/重叠率0.2/point/: source.pcd  target.pcd
data/point/point2/重叠率0.3/: truth.txt
data/point/point2/重叠率0.3/point/: target.pcd
data/point/point2/重叠率0.4/: truth.txt
data/point/point2/重叠率0.4/point/: target.pcd
data/point/point2/重叠率0.5/: truth.txt
data/point/point2/重叠率0.5/point/: target.pcd
data/point/point2/重叠率1.0/: truth.txt
data/point/point2/重叠率1.0/point/: target.pcd
result/: out.pcd  result.txt
src/: FPFH.cpp  icp.cpp  show_result.cpp  viewer.cpp
